--- a/index.html
+++ b/index.html
@@ -3864,7 +3864,7 @@
                         let radius = 50
                         let city = document.querySelector('#city').innerText
                         let state = document.querySelector('#state').innerText
-                        let url = `https://maps.googleapis.com/maps/api/geocode/json?address=${city}+${state}&key=AIzaSyDqq7K5Aj5_4wzi7NGzphVphTEJOZcE9dA`
+                        let url = `https://maps.googleapis.com/maps/api/geocode/json?address=Austin+TX&key=AIzaSyDqq7K5Aj5_4wzi7NGzphVphTEJOZcE9dA`
                         // let url = `https://maps.googleapis.com/maps/api/geocode/json?address=${cities[0].replace(" ", "+")}+${state[0]}&key=AIzaSyDqq7K5Aj5_4wzi7NGzphVphTEJOZcE9dA`
                 
                         let coordinates = await coordinate(url)  
